# django-template

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.test.txt  requirements.txt
.github/workflows/: runtests.yml
config/: celery.py  urls.py
config/api/v1/: urls.py  views.py
config/settings/: base.py  environ.py
config/tests/: test_it_works.py
nginx/: nginx.conf
scripts/: run.sh
