[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Pablo Moreno <pablomoreno.inf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2"
djangorestframework-jwt = ">=1.11.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.3"
django-extensions = "^3.2.0"
ipython = "^8.4.0"
django-filter = "^22.1"
# drf-yasg = "^1.21.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
