[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Pablo Moreno <pablomoreno.inf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.1"
celery = "^5.2.7"
dj-database-url = "^1.0.0"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.3"
django-extensions = "^3.2.0"
ipython = "^8.4.0"
django-filter = "^23.1"
django-environ = "^0.10.0"
drf-spectacular = "^0.26.1"
django-watchman = "^1.3.0"
django-storages = "^1.13.2"
drf-jwt = "^1.19.2"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
